--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
       </div>
     </div>
 
-    <script src="js/game.js"></script>
+    <script src="js/card.js"></script>
+    <script src="js/clicker.js"></script>
+    <script src="js/RPS.js"></script>
   </body>
 </html>
